# astrogrism

./: .bandit.yaml  .gitignore  CHANGES.rst  MANIFEST.in  README.rst  bandit.yaml  conftest.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
astrogrism/: __init__.py  example_mod.py  grism_observation.py
astrogrism/HST/: __init__.py  create_HST_reffiles.py  dispersion_models.py  transform_models.py
astrogrism/HST/reference_file_generators/: __init__.py  common.py  generate_specwcs.py  generate_wavelengthrange.py
astrogrism/config/HST/: ACS_G800L_CCD1_specwcs.asdf  ACS_G800L_CCD1_wavelengthrange.asdf  ACS_G800L_CCD2_specwcs.asdf  ACS_G800L_CCD2_wavelengthrange.asdf  ACS_WFC_distortion.fits  WFC3_G102_wavelengthrange.asdf  WFC3_G141_wavelengthrange.asdf  WFC3_G280_CCD1_wavelengthrange.asdf  WFC3_G280_CCD2_specwcs.asdf  WFC3_G280_CCD2_wavelengthrange.asdf  __init__.py  create_HST_reffiles.py
astrogrism/config/HST/reference_file_generators/: __init__.py  _common.py  _generate_distortion.py  _generate_specwcs.py  _generate_wavelengthrange.py  generate_distortion.py  generate_specwcs.py  generate_wavelengthrange.py  wcs_ref_model.py
astrogrism/config/common/: WFSS_Wavelength_Range_V1.1_with_ACS.tab
astrogrism/extraction/: extraction.py
astrogrism/simulate/: __init__.py  simulate.py
astrogrism/simulate/tests/: test_dispersion.py  test_synthetic_spectrum.py
astrogrism/tests/: test_acs_g800l.py  test_example.py  test_image2grism.py  test_image2world.py  test_subarrays.py  test_wfc3_g102.py  test_wfc3_g141.py  test_wfc3_g141_grizli.py  test_wfc3_g280.py  test_wfc3_subarrays.py
astrogrism/tests/data/: acs_subarray_test_file.fits  acs_test_file.fits  uvis_subarray_test_file.fits  uvis_test_file.fits  wfc3ir_subarray_test_file.fits
astrogrism/tests/grizli_wfc3_g141_solutions/: grizli_wavelength_solutions.npy  grizli_x_solutions.npy  grizli_y_solutions.npy
docs/: conf.py  developer.rst  index.rst  installation.rst  make.bat  quickstart.rst  simulations.rst  transforms.rst
notebooks/: AstrogrismExample.ipynb  GenerateHSTReferenceFiles.ipynb  GrismSimulations.ipynb  SpectrumExtraction.ipynb
